<resources>
    <string name="app_name">Namahatta Katha</string>
    <string name="nav_header_title">Namahatta Katha</string>
    <string name="RewardedAdsId" translatable="false">ca-app-pub-9323569681967862/3164203514</string>
    <string name="AdsId" translatable="false">ca-app-pub-9323569681967862~8409431965</string>
    <string name="menu_home" translatable="false">Home</string>
    <string name="action_settings">Settings</string>
    <string name="feedback">Feedback</string>
    <string name="feed_noti">Thank for your Feedback</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about_gangasagar">About GangaSagar</string>
    <string name="share_aap">Share</string>
    <string name="author">Author</string>
    <string name="support">Support Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="app_related">App Related</string>
    <string name="share">*Hare Krishna* এই অ্যাপটি আপনার জীবনের ভক্তি প্রসারিত করার জন্য ডিজাইন করা হয়েছে। যদি আপনি সাহায্য পান, দয়া করে আমাদের সমর্থন করুন। *হরে কৃষ্ণ।*</string>
    <string name="total_help">Total Help :</string>
    <string name="_0" translatable="false">0</string>
    <string name="donation">"আপনার অবদানের সাথে সমস্ত মিশনের একটি অংশ হয়ে উঠুন।\n"
        "সেবা: সমাজকল্যাণ, বৈদিক সাংস্কৃতিক শিক্ষা।"</string>
    <string name="click_here">Click Here</string>
    <string name="n1">নামহট্ট পরিচয়</string>
    <string name="n2">"আন্তর্জাতিক কৃষ্ণভাবনামৃত সংঘের প্রতিষ্ঠাতা-আচার্য
        শ্রীকৃষ্ণকৃপাশ্রীমূর্তি          শ্রীল অভয়চরণারবিন্দ ভক্তিবেদান্ত স্বামী প্রভুপাদের
        আশীর্বাদ ধন্য
        শ্রীশ্রীমৎ জয়পতাকা স্বামী গুরু মহারাজের নির্দেশানুসারে শ্রীমৎ গৌরাঙ্গপ্রেম স্বামী মহারাজ কর্তৃক সম্পাদিত।
        "</string>
    <string name="n3">"নামহট্ট ডাইরেক্টরেট্\n\n"
        "ইসকন, শ্রীমায়াপুর, নদীয়া।\n"</string>
    <string name="n4">প্রকাশক :</string>
    <string name="n5">"ইস্কন\n\n"
        "শ্রীশ্রীহরেকৃষ্ণ নামহট্টের পক্ষে\n"
        "শ্রীগৌরচন্দ্র দাস ব্রহ্মচারী\n"
        "পোঃ শ্রীমায়াপুর, নদীয়া, পশ্চিমবঙ্গ।\n\n"
        "ফোন: (০৩৪৭২) ২৪৫২৯৪\n"
        "মোঃ ৯৭৩৪৬১৫৯১৮, ৯৭৩৫৩৫৪১৯৯\n\n\n\n\n"
    "সংশোধিত ও পরিবর্ধিত সংস্করণ ৫০,০০০ কপি, ২০১৬ শ্রীনৃসিংহ চতুর্দশী তিথি\n"
    </string>
    <string name="n6">গ্রন্থস্বত্ব :</string>
    <string name="n7">২০১৬ ইস্কন শ্রীশ্রীহরেকৃষ্ণ নামহট্ট কর্তৃক সর্বস্বত্ব সংরক্ষিত</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_name">Full name</string>
    <string name="hint_message">Your message</string>
    <string name="send_support">Send Message</string>
    <string name="phone_number">Phone Number</string>
    <string name="send_your_feedback_successful">Send Your Feedback Successful</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="desc">Our help center is always open for suggestions, questions, and other inquiries.</string>
    <string name="c_feedback">If you benefit from using this app. You can tell us your love on Google Play store.</string>
    <string name="notification">Notification</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="extra">Extra</string>
    <string name="AdsLoaded">Ads are loaded Click again</string>
    <string name="help_us_by_watching_ads">Help us by watching ads</string>
    <string name="language">Language</string>
    <string name="help_us_to_watching_ads">Click here to Help</string>
    <string name="upi_paytm" translatable="false">8972333089@paytm</string>
    <string name="whoops">Whoops… this information\nis not available for a moment</string>
    <string name="result_not_found">Result Not Found</string>
    <string name="s1">মঙ্গলাচরণ</string>
    <string name="s2">মঙ্গল আরতি</string>
    <string name="s3">দর্শন আরতি</string>
    <string name="s4">গুরুপূজা</string>
    <string name="s5">ভোগ আরতি</string>
    <string name="s6">সন্ধ্যা আরতি</string>
    <string name="s7">দামোদর আরতি</string>
    <string name="s8">"প্রসাদ সেবানাররম্ভে "</string>
    <string name="f1">মঙ্গলাচরণ</string>
    <string name="f2">"  বন্দেহং শ্রীগুরোঃ শ্রীযুত পদকমলং শ্রীগুরুন বৈষ্ণবাংশ্চ শ্রীরূপং সাগজাতং সহগণ-রঘুনাথান্বিতং তং সজীবম্ ৷৷          সাদ্বৈতং সাবধৃতং পরিজনসহিতং কৃষ্ণচৈতন্য-দেবং শ্রীরাধা-কৃষ্ণপাদান সহগণ-ললিতা-স্ত্রীবিশাখান্বিতাংশ্চ ৷৷  "</string>
    <string name="f3">
"শ্রীগুরু প্রণাম"</string>
    <string name="f4">"অজ্ঞান-তিমিরান্ধস্য জ্ঞানাঞ্জন শলাকয়া\n"
        "চক্ষুরুন্মীলিতং যেন তস্মৈ শ্রীগুরবে নমঃ ।।"</string>
    <string name="f5">"শ্রীল প্রভুপাদ প্রণতি"</string>
    <string name="f6">"নমো ওঁবিষ্ণুপাদাগ কৃষ্ণপ্ৰেষ্ঠায়া ভূতলে।\n "
        "শ্রীমতে ভক্তিবেদান্ত স্বামীনিতি নামিনে ৷৷ \n "
        "নমস্তে সারস্বতে দেবে গৌরবাণী প্রচারিণে ।\n "
        "নির্বিশেষ শূন্যবাদী পাশ্চাত্যদেশ তারিণে ।।\n "</string>
    <string name="f7">"শ্রীল ভক্তিসিদ্ধান্ত সরস্বতী ঠাকুর প্রণতি\n"</string>
    <string name="f8">"নমো ওঁ বিষ্ণুপাদায় কৃষ্ণপ্রেষ্ঠায় ভূতলে\n"
        "শ্রীমতে ভক্তিসিদ্ধান্ত সরস্বতীতি নামিনে ৷৷\n"
        "শ্রীবার্যভানবীদেবী-দয়িতায় কৃপাৰূয়ে।\n"
        "কৃষ্ণসম্বন্ধ-বিজ্ঞানদায়িনে প্ৰভবে নমঃ ।।\n"
        "মাধুর্যোজ্বল-প্রেমাঢ্য শ্রীরূপানুগভক্তিদ শ্রীগৌরকরুণাশক্তি-বিগ্রহায় নমোহস্ত তে ৷৷\n"
        "নমস্তে গৌরবাণী-শ্রীমৃতয়ে দীনতারিণে।\n"
        "শ্রীরূপানুগবিরুদ্ধাপ সিদ্ধান্ত ফ্যাস্তহারিণে ৷৷ \n\n"</string>
    <string name="f9">"শ্রীল-গৌরকিশোর দাস বাবাজী প্রণতি\n"
</string>
    <string name="f10">" নমো গৌরকিশোরায় সাক্ষণদবৈরাগামুতয়ে ।\n"
        "বিপ্রলওরসাস্তোধে পাদাম্বুজায় তে নমঃ।\n\n"</string>
    <string name="f11">"শ্রীল ভক্তিবিনোদ ঠাকুর প্রণতি\n"</string>
    <string name="f12">"নমো ভক্তিবিনোদায় সচ্চিদানন্দ নামিনে ।

গৌরশক্তিস্বরূপায় রূপানুগবরায় তে ॥\n\n"</string>
    <string name="f13">"শ্রীল জগন্নাথ দাস বাবাজী প্রণতি\n"
</string>
    <string name="f14">
"শ্রীগৌরাবির্ভাবভূমেস্ত্বং নির্দেষ্টা সম্মান প্রিয়ঃ |\n"
        "বৈষ্ণব-সাৰ্ব্বভৌম শ্রীজগথায় তে নমঃ ।।\n\n"</string>
    <string name="f15">"শ্রীবৈষ্ণব-প্ৰণাম\n"</string>
    <string name="f17">"শ্রীগৌরাঙ্গ প্রণাম\n"</string>
    <string name="f16">"বাঞ্ছাকল্পতরুভ্যশ্চ কৃপাসিন্ধুভ্য এব চ।\n"
    "পতিতানাং পাবনেভ্যো বৈষ্ণবেভ্যো নমো নমঃ\n\n"</string>
    <string name="f18">"নমো মহাবদান্যায় কৃষ্ণপ্রেম-প্রদায় তে।\n"
 "কৃষ্ণায় কৃষ্ণচৈতন্য নামে গৌরত্বিষে নমঃ ॥\n\n"</string>
    <string name="f19">"পঞ্চতত্ত্ব প্রণাম\n"</string>
    <string name="f20">"পঞ্চতত্ত্বাত্মকং কৃষ্ণং ভক্তরূপম্বরূপকম্ ।\n"
        "ভক্তাবতারং ভক্তাখ্যং নমামি ভক্তশক্তিকম্ ॥\n\n"</string>
    <string name="f21">"শ্রীকৃষ্ণ প্রণাম\n"</string>
    <string name="f22">"হে কৃষ্ণ করুণাসিন্ধো দিনবন্ধো জগৎপতে।\n"
        "গোপেশ গোপিকাকান্ত রাধাকান্ত নমোপ্ত তে ॥\n\n"</string>
    <string name="f23">"শ্রীরাধাপ্রণাম\n"</string>
    <string name="f24">
"তপ্ত কাঞ্চন-গৌরাঙ্গী রাধে বৃন্দাবনেশ্বরী।\n"
        "বৃষভানুসুতে দেবী প্রণমামি হরিপ্রিয়ে ৷৷\n\n"</string>
    <string name="f25">"সম্বন্ধাধিদেব প্রণাম\n"</string>
    <string name="f26">"জয়তাং সুরতৌ পলোমম মন্দ মতেগতী।\n"
        "মৎসবর্ষ পদাস্তোজৌ রাধা-মদনমোহনৌ ৷৷\n\n"</string>
    <string name="f27">"অভিধেয়াধিদেব প্রণাম\n"</string>
    <string name="f28">"দীবাদ-বৃন্দারণ্য-কল্পদ্রুমাধঃ\n"
"শ্রীমদূরত্নাগার সিংহাসনছৌ !\n"
 "শ্রীশ্রীরাধা-শ্রীল গোবিন্দদেবৌ\n"
 "প্রেষ্ঠালীভিঃ সেব্যমানৌ স্মরামি ।।\n\n"</string>
    <string name="c1">"শ্রীশ্রীগুর্ব্বষ্টকম্\ \n"</string>
    <string name="c2"> "সংসার-দাবানল-লীঢ় লোক ত্রাণায় কারুণ্যঘনাঘনত্বম্ ।\n"
        "প্রাপ্তস্য কল্যাণ-গুণার্ণবস্য বন্দে গুরোঃ শ্রীচরণারবিন্দম্ ৷৷ ১ ৷৷\n"
   " মহাপ্রভোঃ কীর্তন-নৃত্য-গীত বাদিত্রমাদ্যন্মনসো রসেন ।\n"
        "রোমাঞ্চ কম্পাশ্রু-তরঙ্গভাজো বন্দে গুরোঃ শ্রীচরণারবিন্দম্ ৷৷২ ৷৷\n"
    "শ্রীবিগ্রহারাধন-নিত্য-নানা
শৃঙ্গার-তন্মন্দির মার্জনাদৌ ।\n"
"যুক্তস্য ভক্তাংশ্চ নিযুঞ্জতোঽপি
বন্দে গুরোঃ শ্রীচরণারবিন্দম্ ৷৷ ৩ ৷৷\n"
    "চতুর্বিধ শ্রীভগবৎপ্রসাদ
স্বাদ্বন্নতৃপ্তান্ হরিভক্তসঙ্ঘান্ ।\n"
        "ক্বত্বৈব তৃপ্তিং ভজতঃ সদৈব
বন্দে গুরোঃ শ্রীচরণারবিন্দম্ ৷৷ ৪ \n"
    "শ্রীরাধিকামাধবয়োরপার
মাধুর্যলীলা গুণ-রূপ-নাनাম্ ।\n"
"প্রতিক্ষণাস্বাদন-লোলুপস্য
বন্দে গুরোঃ শ্রীচরণারবিন্দম্ ॥ ৫ ॥\n"
    "নিকুঞ্জযুনো রতিকেলিসিদ্ধ্যৈ
যা যালিভিযুক্তিরপেক্ষণীয়া ।\n"
        "তত্রাতিদাক্ষাদতিবল্লভস্য
বন্দে গুরোঃ শ্রীচরণারবিন্দম্ ৷৷ ৬ ৷\n"
    "সাক্ষাদ্ধরিত্বেন সমস্তশাস্ত্ৰৈ রুক্তস্তথা ভাব্যত এব সদ্ভিঃ কিন্তু প্রভোর্যঃ প্রিয় এব তস্য বন্দে গুরোঃ শ্রীচরণারবিন্দম ৷৷ ৭ ৷৷\n"
    "যস্য প্রসাদাভগবৎ-প্রসাদো যস্যাপ্রসাদান্ন গতিঃ কুতোঽপি ৷\n"
        "ধ্যায়ংস্তবংস্তস্য যশস্ত্রী-সন্ধ্যং বন্দে গুরোঃ শ্রীচরণারবিন্দম ৷৷৮৷৷\n"
    "—শ্রীল বিশ্বনাথ চক্রবর্তী ঠাকুর\n\n"</string>
    <string name="c3">"শ্রীল প্রভুপাদ প্রণতি\n"</string>
    <string name="c4">"নমো ওঁবিষ্ণুপাদাগ কৃষ্ণপ্ৰেষ্ঠায়া ভূতলে।\n"
        "শ্রীমতে ভক্তিবেদান্ত স্বামীনিতি নামিনে ৷৷\n"
        "নমস্তে সারস্বতে দেবে গৌরবাণী প্রচারিণে ।\n"
        "নির্বিশেষ শূন্যবাদী পাশ্চাত্যদেশ তারিণে ।।\n\n"</string>
    <string name="c5">  "পঞ্চতত্ত্ব মহামন্ত্র\n"</string>
    <string name="c6">"(জয়) শ্রীকৃষ্ণচৈতন্য প্রভু নিত্যানন্দ।\n"
"শ্রীঅদ্বৈত গদাধর শ্রীবাসাদি গৌরভক্তবৃন্দ ৷৷\n\n"</string>
    <string name="c7">"হরে কৃষ্ণ মহামন্ত্র\n"</string>
    <string name="c8">"হরে কৃষ্ণ হরে কৃষ্ণ কৃষ্ণ কৃষ্ণ হরে হরে।\n"
"হরে রাম হরে রাম রাম রাম হরে হরে ।।"</string>
    <string name="c9">  "শ্রীনৃসিংহদেবের স্তব ও প্রণাম\n"</string>
    <string name="c10">"নমস্তে নরসিংহায় প্রহ্লাদাহ্লাদ-দারিনে!\n"
        "হিরণ্যকশিপোর্বক্ষঃ শিলাটঙ্ক-নখালয়ে ৷৷\n"
        "ইতো নৃসিংহঃ পরতো নৃসিংহো ।\n"
        "যতো যতো যামি ততো নৃসিংহঃ ৷৷\n"
        "বর্হিনৃসিংহো হৃদয়ে নৃসিংহো ।\n"
        "নৃসিংহমাদিং শরণং প্রপদ্যে ৷৷\n"
        "তব করকমলবরে নখমদ্ভুতশৃঙ্গং দলিতহিরণ্যকশিপুতনুভূঙ্গম্ ।\n"
        "কেশব ধৃত-নরহরিরূপ জয় জগদীশ হরে ॥\n"</string>
    <string name="c11">"তুলসী সেবা\n"</string>
    <string name="c12"> "শ্রীতুলসী আরতি কীর্ত্তন\n"
    "নমো নমঃ তুলসী! কৃষ্ণপ্রেয়সী! রাধাকৃষ্ণ-সেবা পাব এই অভিলাষী ৷৷\n"
        "যে তোমার শরণ লয়, তার বাঞ্ছা পূর্ণ হয়, কৃপা করি কর তারে বৃন্দাবন বাসী।\n"
        "মোর এই অভিলাষ, বিলাষ-কুঞ্জে দিও বাস, নয়নে হেরিব সদা যুগলরূপরাশি ।।\n"
        "এই নিবেদন ধর, সখীর অনুগত কর, সেবা-অধিকার দিয়ে কর নিজ দাসী ।\n"
        "দীন কৃষ্ণদাসে কয়, এই যেন মোর হয়, শ্রীরাধাগোবিন্দ-প্রেমে সদা যেন ভাসি ৷৷"\n\n"
</string>
    <string name="t">"শ্রীনৃসিংহদেবের স্তব\n"</string>
    <string name="t1">"জয় নৃসিংহ শ্ৰী নৃসিংহ ।\n"
        "জয় জয় জয় শ্রীনৃসিংহ ॥\n"
        "উগ্রং বীরং মহাবিষ্ণুং জ্বলন্তং সর্বতোমুখম্ ।\n"
        "নৃসিংহং ভীষণং ভদ্রং মৃত্যোমৃত্যুং নমাম্যহম্ ৷৷\n"
        "শ্রীনৃসিংহ জয় নৃসিংহ জয় জয় নৃসিংহ ।\n"
        "প্রহ্লাদেশ জয়পদ্মমুখ পদ্মভৃঙ্গং ৷৷\n"
        "তব করকমলবরে নখমদ্ভুতশৃঙ্গং দলিতহিরণ্যকশিপুতনুভূঙ্গম্ ।\n"
        "কেশব ধৃত-নরহরিরূপ জয় জগদীশ হরে ।\n\n"</string>
    <string name="t2"> "পঞ্চতত্ব দর্শন\n"
    "শ্রীশ্রীপঞ্চতত্ব দর্শন\n"</string>
    <string name="t3"> "শ্রীকৃষ্ণচৈতন্য প্রভু দয়া কর মোরে। তোমা বিনা কে দয়ালু জগৎ-সংসারে ৷৷\n"
        "পতিতপাবন হেতু তব অবতার ।\n"
        "মো সম পতিত প্রভু না পাইবে আর ৷৷\n"
        "হা হা প্রভু নিত্যানন্দ! প্রেমানন্দ সুখী ৷\n"
        "কৃপাবলোকন কর আমি বড় দুঃখী ৷৷\n"
        "দয়া কর সীতাপতি অদ্বৈত গোসাঞি ৷\n"
        "তব কৃপাবলে পাই চৈতন্য-নিতাই ৷৷\n"
        "হা-হা স্বরূপ, সনাতন, রূপ, রঘুনাথ ।\n"
        "ভট্টযুগ, শ্রীজীব, হা প্রভু লোকনাথ ॥\n"
        "দয়া কর শ্রী আচার্য প্রভু শ্রীনিবাস।\n"
        "রামচন্দ্রসঙ্গ মাগে নরোত্তম দাস ॥\n\n"</string>
    <string name="t4"> "শ্রীরাধামাধব দর্শন\n"
    "শ্রীশ্রীরাধামাধব দর্শন\n"</string>
    <string name="t5">"গোবিন্দমাদিপুরুষং তমহং ভজামি (তিনবার)\n"
"বেণুং ক্বণত্তমরবিন্দদলায়তাক্ষং
বহাবতংসমসিতাম্বুদসুন্দরাঙ্গম্।\n"
"কন্দর্পকোটিকমনীয়বিশেষশোভং
গোবিন্দমাদিপুরুষং তমহং ভজামি৷৷\n"
"অঙ্গানি যস্য সকলেন্দ্রিয়বৃত্তিমত্তি
পশ্যন্তি পান্তি কলয়স্তি চিরং জগন্তি।
আনন্দচিন্ময়সদুজ্জ্বলবিগ্রহস্য
গোবিন্দমাদিপুরুষং তমহং ভজামি ।। \n"
    "(শ্ৰীশ্ৰীব্ৰহ্মসংহিতা শ্লোক ৩০, ৩২)\n\n"</string>
    <string name="h2">মঙ্গল আরতি</string>
    <string name="h3">দর্শন আরতি</string>
</resources>