<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/contact_bg"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal"
            android:text="@string/contact_us"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="12dp"
            android:gravity="center_horizontal"
            android:text="@string/desc"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/white"
            android:textStyle="italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="12dp"
            android:gravity="center_horizontal"
            android:text="@string/c_feedback"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/white"
            android:textStyle="italic" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/white" />
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <Button
        android:id="@+id/wh_button"
        android:layout_width="40dp"
        android:layout_margin="5dp"
        android:background="@drawable/whatsapp"
        android:layout_height="40dp" />
    <Button
        android:id="@+id/play_button"
        android:layout_width="40dp"
        android:layout_margin="5dp"
        android:background="@drawable/playstore"
        android:layout_height="40dp" />
    <Button
        android:id="@+id/email_button"
        android:layout_width="40dp"
        android:layout_margin="5dp"
        android:background="@drawable/message"
        android:layout_height="40dp" />

</LinearLayout>

    </LinearLayout>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"

        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/applogo"
        />

</RelativeLayout>